--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "jasmine-vim"]
 	path = jasmine-vim
 	url = git://github.com/claco/jasmine.vim.git
+[submodule "tabular"]
+	path = tabular
+	url = https://github.com/godlygeek/tabular.git
